broken link fixes

--- a/index.html
+++ b/index.html
@@ -131,6 +131,11 @@ permalink: /
     </div>
     <ul class="home-news list-unstyled">
       <li>
+        <h4><a href="http://news.stoneagetools.com/west-coast-regional-sales-manager">StoneAge Welcomes New Sales Manager for the West Coast</a></h4>
+        <p>StoneAge is pleased to welcome David Moore as our Regional Sales Manager for the West Coast, based in Houston, Texas.<br>
+        <small><i class="fa fa-newspaper-o"></i> E-blast, March 2017</small></p>
+      </li>
+      <li>
         <h4><a href="http://news.stoneagetools.com/warthog-switcher-cuts-time-in-half">Warthog Switcher Avalable for 3/4" Inlets</a></h4>
         <p>The Switcher introduces the ability to run a single sewer jetting tool in either pulling or cleaning mode, without removing the nozzle from the pipe &ndash; <em>Now Available for 3/4 Inlets</em><br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, February 2017</small></p>
@@ -149,11 +154,6 @@ permalink: /
         <h4><a href="http://news.stoneagetools.com/best-place-to-work-2016">SCS High Flow Tank Cleaner Now Available</a></h4>
         <p>The StoneAge SCS High Flow Tank Cleaner delivers high flow and controlled rotation for cleaning difficult tanks, lines, and vessels.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, February 2017</small></p>
-      </li>
-      <li>
-        <h4><a href="http://news.stoneagetools.com/europe-2017">StoneAge Announces Direct Sales and New Distribution Territories in Europe</a></h4>
-        <p>StoneAge will directly support industrial cleaning contractor needs in Western Europe by adding sales staff throughout the U.K., Netherlands and France as well as opening its European headquarters in the United Kingdom. Non-Western EEA markets will continue to be served by its realigned and exclusive distribution network.<br>
-        <small><i class="fa fa-newspaper-o"></i> PRWeb, January 2017</small></p>
       </li>
       <li><a href="/news">More news here</a></li>
     </ul>
