--- a/manuals.html
+++ b/manuals.html
@@ -284,7 +284,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/beetle">BT12, BT18, BT25</a></td>
                 <td>BEETLE<br>Rotary pipe and tube cleaning nozzle </td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BT_Manual.pdf" target="_blank" class="btn btn-sm">PL 601</a></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BT_manual.pdf" target="_blank" class="btn btn-sm">PL 601</a></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/BT_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BT_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a></td>
                 <td class="text-center"></td>
@@ -400,7 +400,7 @@ permalink: /manuals
                 <td class="text-center"><a href="/assets/pdf/manuals/LWP-500-V2_manual.pdf" target="_blank" class="btn btn-sm">PL 610-V2</a></td>
                 <td class="text-center"></td>
                 <td class="text-center"></td>
-                <td class="text-center"><a href="/assets/pdf/manuals/LWP-500_Extension_Kit.pdf" target="_blank" class="btn btn-sm">PL 610-ADD</a></td>
+                <td class="text-center"></td>
               </tr>
               <tr>
                 <td><a href="/navigator">NAV-100</a></td>
@@ -629,7 +629,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/wgr-magnum">WGR Magnum</a></td>
                 <td>WARTHOG WGR MAGNUM<br>Sewer Jetting Nozzles</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/WGR_User_Manual.pdf" target="_blank" class="btn btn-sm">PL 533</a></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/WGR_manual.pdf" target="_blank" class="btn btn-sm">PL 533</a></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/WGR_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
                 <td class="text-center"></td>
                 <td class="text-center"></td>
