--- a/contact.html
+++ b/contact.html
@@ -56,6 +56,10 @@ contact-main: yes
               <i class="fa fa-star" st></i> <em>Rental Location</em> <i class="fa fa-star" st></i><br>
               +1 (440) 230-8080<br/>
               <a href="/ohio">View details</a></p>
+            <h3>Europe</h3>
+            <p>
+              (+44) (0) 1684 892065<br/>
+              <a href="/europe">View details</a></p>
           </div>
           <!-- E-mail Us -->
           <div class="col-sm-4 contact-method">
