--- a/index.html
+++ b/index.html
@@ -131,6 +131,11 @@ permalink: /
     </div>
     <ul class="home-news list-unstyled">
       <li>
+        <h4><a href="http://news.stoneagetools.com/welcome-stoneage-europe">StoneAge, Inc Announces Acquisition of AquaPower Ltd. In U.K.</a></h4>
+        <p>StoneAge announces that on February 21st 2017, it finalized the acquisition of AquaPower Ltd., a leading reseller of high pressure waterblasting tooling and accessories based in the United Kingdom. The acquisition expands capacity for StoneAge to provide world-class water blasting products and technical support to industrial cleaning contractors across the European Economic Area.<br>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, March 2017</small></p>
+      </li>
+      <li>
         <h4><a href="http://news.stoneagetools.com/west-coast-regional-sales-manager">StoneAge Welcomes New Sales Manager for the West Coast</a></h4>
         <p>StoneAge is pleased to welcome David Moore as our Regional Sales Manager for the West Coast, based in Houston, Texas.<br>
         <small><i class="fa fa-newspaper-o"></i> E-blast, March 2017</small></p>
@@ -150,12 +155,7 @@ permalink: /
         <p>The new HXR-300 Rotary Hydro-X tool has an angled rotating jet pattern for effective digging and working around utilities.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, February 2017</small></p>
       </li>
-      <li>
-        <h4><a href="http://news.stoneagetools.com/best-place-to-work-2016">SCS High Flow Tank Cleaner Now Available</a></h4>
-        <p>The StoneAge SCS High Flow Tank Cleaner delivers high flow and controlled rotation for cleaning difficult tanks, lines, and vessels.<br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, February 2017</small></p>
-      </li>
-      <li><a href="/news">More news here</a></li>
+      <li><a href="http://news.stoneagetools.com/">More news here</a></li>
     </ul>
   </div>
   <!-- End News --> 
