--- a/loc-europe.html
+++ b/loc-europe.html
@@ -37,7 +37,7 @@ contact-europe: yes
             Britannia Way<br/>
             Malvern WR14 1GZ<br/>
             United Kingdom<br/><br/>
-            (+44) (0) 1684 892065<br/>
+            +44 (0) 1684 892065<br/>
             <a href="mailto:sales-eu@stoneagetools.com">sales-eu@stoneagetools.com</a><br/><br/>
             <small>Monday to Friday 8:00am–5:00pm GMT</small></p>
         </div>
@@ -53,35 +53,38 @@ contact-europe: yes
           <div class="col-sm-6">
             <p><strong>Steve Ellis</strong><br/>
               Managing Director<br/>
-              Main: (+44) (0) 1684 892065<br/>
-            <a href="mailto:steve.ellis@stoneagetools.com">steve.ellis@stoneagetools.com</a></p>
+              Office: +44 (0) 1684 892065<br/>
+              Mobile: +44 (0)7468 574 483<br />
+            <a href="mailto:steve.ellis@stoneagetools.com">steve.ellis@&#8203;stoneagetools.com</a></p>
           </div>
           <div class="col-sm-6">
             <p><strong>Karen Birt</strong><br/>
               Operations Manager<br/>
-              Main: (+44) (0) 1684 892065<br/>
-              <a href="mailto:karen.birt@stoneagetools.com">karen.birt@stoneagetools.com</a></p>
+              Main: +44 (0) 1684 892065<br/>
+              <a href="mailto:karen.birt@stoneagetools.com">karen.birt@&#8203;stoneagetools.com</a></p>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-6">
             <p><strong>Andrew Birt</strong><br/>
               European Dealer/UK Sales Manager<br/>
-              Main: (+44) (0) 1684 892065<br/>
-            <a href="mailto:andrew.birt@stoneagetools.com">andrew.birt@stoneagetools.com</a></p>
+              Office: +44 (0) 1684 892065<br/>
+              Mobile: +44 (0)7788 926261<br />
+            <a href="mailto:andrew.birt@stoneagetools.com">andrew.birt@&#8203;stoneagetools.com</a></p>
           </div>
           <div class="col-sm-6">
             <p><strong>Jan van der Wal</strong><br/>
               Sales Manager – Benelux and Germany<br/>
-              Main: (+44) (0) 1684 892065<br/>
-            <a href="mailto:jan.vanderwal@stoneagetools.com">jan.vanderwal@stoneagetools.com</a></p>
+              Office: +44 (0) 1684 892065<br/>
+              Mobile: +31 6 50 63 50 90<br />
+            <a href="mailto:jan.vanderwal@stoneagetools.com">jan.vanderwal@&#8203;stoneagetools.com</a></p>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-6">
             <p><strong>Bob Birt</strong>
             <br/>Technical Consultant<br/>
-              Main: (+44) (0) 1684 892065<br/>
+              Main: +44 (0) 1684 892065<br/>
               <a href="mailto:bob@aquapower.uk.com">bob@aquapower.uk.com</a></p>
           </div>
         </div>
@@ -91,22 +94,22 @@ contact-europe: yes
           <div class="col-sm-6">
             <p><strong>Andrew Stevenson</strong><br/>
               Customer Service<br/>
-              Main: (+44) (0) 1684 892065<br/>
-            <a href="mailto:andrew.stevenson@stoneagetools.com">andrew.stevenson@stoneagetools.com</a></p>
+              Main: +44 (0) 1684 892065<br/>
+            <a href="mailto:andrew.stevenson@stoneagetools.com">andrew.stevenson@&#8203;stoneagetools.com</a></p>
           </div>
           <div class="col-sm-6">
             <p><strong>James Stallard</strong><br/>
               Customer Service<br/>
-              Main: (+44) (0) 1684 892065<br/>
-            <a href="mailto:james.stallard@stoneagetools.com">james.stallard@stoneagetools.com</a></p>
+              Main: +44 (0) 1684 892065<br/>
+            <a href="mailto:james.stallard@stoneagetools.com">james.stallard@&#8203;stoneagetools.com</a></p>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-6">
             <p><strong>Karen Evans</strong><br/>
               Customer Service<br/>
-              Main: (+44) (0) 1684 892065<br/>
-            <a href="mailto:karen.evans@stoneagetools.com">karen.evans@stoneagetools.com</a></p>
+              Main: +44 (0) 1684 892065<br/>
+            <a href="mailto:karen.evans@stoneagetools.com">karen.evans@&#8203;stoneagetools.com</a></p>
           </div>
         </div>
 
