--- a/waterblast-automation/autobox-abx-3l.html
+++ b/waterblast-automation/autobox-abx-3l.html
@@ -258,12 +258,23 @@ master-slider: yes
     <!-- Indicators -->
     <ol class="carousel-indicators">
       <li data-target="#carousel-product" data-slide-to="0" class="active"></li>
-<!--      <li data-target="#carousel-product" data-slide-to="1"></li>-->
+      <li data-target="#carousel-product" data-slide-to="1"></li>
     </ol>
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
+
       <div class="item active">
+<!--
+        <div class="insight">
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
+          <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
+          <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
+        </div>
+-->
+        <img src="/assets/img/sliders/abx_3l_tube_face_002.jpg" alt="ABX-3L triple lance tube cleaning">
+      </div>
+      <div class="item">
         <div class="insight">
           <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>The ABX-3L proved to be a brutally tough and capable tool. During the entire project, which lasted two weeks, we never suffered a mechanical breakdown.”</p>
@@ -272,20 +283,9 @@ master-slider: yes
         <img src="/assets/img/sliders/abx_3l_tube_face.jpg" alt="ABX-3L lancing exchanger">
       </div>
 
-<!--
-      <div class="item">
-        <div class="insight">
-          <img src="/assets/img/quote.png" alt="quote" class="quote" />
-          <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
-          <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
-        </div>
-        <img src="/assets/img/sliders/abx-2l-big-exchanger.jpg" alt="...">
-      </div>
--->
-
     </div><!-- End wrapper -->
 
-    <!-- Controls 
+    <!-- Controls -->
     <a class="left carousel-control" href="#carousel-product" role="button" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
@@ -293,7 +293,7 @@ master-slider: yes
     <a class="right carousel-control" href="#carousel-product" role="button" data-slide="next">
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
-    </a>-->
+    </a>
   </div>
 </div>
 <!--=== End Product Testimonials ===-->
