--- a/waterblast-automation/autobox-abx-pro.html
+++ b/waterblast-automation/autobox-abx-pro.html
@@ -60,6 +60,7 @@ master-slider: yes
         </div>
       <div class="clearfix"></div>
       </div>
+      <p class="product-description promo-heading"><em>Package it with AutoPacks! <a href="http://www.stoneagetools.com/autopack-pro" style="font-weight:300;">Find out how <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></em></p>
       
       <p class="product-description">The AutoBox ABX-PRO is a hose feed tractor engineered with safety, portability and quick set-up in mind. This versatile device is designed with multiple mounting options and accessories to adapt it for a wide variety of pipe, drain and tube cleaning applications.</p>
       <p class="product-description">The ABX-PRO is the perfect tool for limited access applications and includes a lightweight control box for increased safety and mobility.</p>
@@ -135,15 +136,10 @@ master-slider: yes
           </tbody>
           </table>
         </div>
-        <aside class="col-sm-3 col-sm-offset-4 aside-box">
-          <h3>Package includes:</h3>
-            <ul class="list-unstyled">
-              <li>Hose feed tractor</li>
-              <li>Hose stops/backout prevention</li>
-              <li>Strap mount</li>
-              <li>Splash plate</li>
-              <li>Control box</li>
-            </ul>
+        <aside class="col-sm-4 col-sm-offset-3 aside-box">
+          <img src="/assets/img/thumb/autopack-box.png" class="img-responsive" style="width:100px; float:left; margin:20px 20px 60px 0;" alt="AutoPack-PRO" />
+          <h3>AutoPack-PRO</h3>
+          <p>Everything you need to successfully complete <span style="font-weight:400;">pipe, drain, or exchanger cleaning</span> packaged in a convenient, durable travel box.<br /><a href="http://www.stoneagetools.com/autopack-pro"><strong>More information <i class="fa fa-angle-double-right" aria-hidden="true"></i></strong></a></p>
         </aside>
       </section>
 
