--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -813,7 +813,7 @@ landing: yes
               <tbody>
                 <tr>
                   <th>Maximum Pressure</th>
-                  <td>15 psi<br><span class="metric">1040 bar</span></td>
+                  <td>15k psi<br><span class="metric">1040 bar</span></td>
                 </tr>
                 <tr>
                   <th>Maximum Flow</th>
