add SC-125 presence

--- a/downhole-tools/spincat-sc-125.html
+++ b/downhole-tools/spincat-sc-125.html
@@ -1,9 +1,8 @@
 ---
 layout: default
 page-type: product
-title: StoneAge SpinCat SC-250 Downhole Tools
-excerpt: The Spincat SC-250 can be used at operating pressures of 1000 to 5000 psi and flow rates of 0.7 to 3 bpm (30 to 120 gpm).
-permalink: /sc-250
+title: StoneAge SpinCat SC-125 Slimhole Tools
+permalink: /sc-125
 master-slider: yes
 ---
 
@@ -13,7 +12,7 @@ master-slider: yes
     <ul class="breadcrumb">
       <li><a href="/">Home</a></li>
       <li><a href="/downhole-tools">Downhole Tools</a></li>
-      <li class="active">SpinCat SC-250</li>
+      <li class="active">SpinCat SC-125</li>
     </ul> 
   </div>
 </div>
@@ -22,25 +21,49 @@ master-slider: yes
 <!-- Product Intro -->
 <main class="container stoneage-product padding-tb-30">
   <div class="row">
-    <div class="col-md-6 margin-bottom-30">
-      <img src="/assets/img/product/sc-250-02.jpg" class="img-responsive" alt="Spincat downhole wash tools for oil and gas industry">
+    <div class="col-md-5 margin-bottom-30">
+      <!-- Master Slider -->
+      <div class="ms-showcase2-template">
+        <div class="master-slider ms-skin-light-2" id="masterslider">
+          <div class="ms-slide">
+            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/sc-125-02.jpg" alt="SpinCat slimhole wash tools">
+            <img class="ms-thumb" src="/assets/img/product/thumb-sc-125-02.jpg" alt="thumb">
+<!--              <a data-type="video" href="https://www.youtube.com/embed/KBNWNhc5Cqw"> </a>-->
+          </div>
+          <div class="ms-slide">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/sc-125-01.jpg" alt="SpinCat slimhole wash tools">
+            <img class="ms-thumb" src="/assets/img/product/thumb-sc-125-01.jpg" alt="thumb">
+          </div>
+        </div>
+      </div>
+      <!-- End Master Slider -->
     </div>
 
-    <div class="col-md-6 padding-left-60">
+    <div class="col-md-7 padding-left-60">
       <div class="product-heading">
-        <h1>SpinCat SC-250</h1>
+        <h1>SpinCat SC-125</h1>
         <div class="dropdown product-social">
           <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i> Share</a>
           <ul class="dropdown-menu">
-            <li><a href="mailto:?subject=StoneAge SpinCat SC-250&body=Check out the StoneAge SpinCat SC-250 downhole wash tools: http://www.stoneagetools.com/sc-250">E-mail link</a></li>
+            <li><a href="mailto:?subject=StoneAge SpinCat SC-125&body=Check out the StoneAge SpinCat SC-125 slimhole wash tools: http://www.stoneagetools.com/sc-125">E-mail link</a></li>
           </ul>
         </div>
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">The Spincat SC-250 can be used at operating pressures of 1000 to 5000 psi and flow rates of 0.7 to 3 bpm (30 to 120 gpm). It has a 1 1/2″ AMMT inlet thread.</p>
+      <p class="product-description">The SC125 provides well intervention teams with an advanced solution for 1 1/4” CT BHA’s requiring a “slick” or Slimhole profile. Proven effective in wells with small ID restrictions and a history of entry challenges, the SC125’s smooth profile aids reaching target depths the first time then delivers powerful impact force and dwell time to enhance perf stimulation and clean-out objectives.</p>
+      
+      <h2>Features</h2>
+      <ul class="feature-list">
+        <li>Recessed head ensures rotation to continue when tool is against well bore wall and
+          contributes to “slick”profile</li>
+        <li>Constructed of hardened stainless steel for strength, durability &amp; chemical resistance</li>
+        <li>Drilled head sized for nominal flow rate of either .5 or 1.0 bpm</li>
+        <li>Viscous speed control</li>
+        <li>Field serviceable</li>
+      </ul>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
 
   </div>
 
@@ -55,7 +78,7 @@ master-slider: yes
             <ul>
               <li><a href="#section-bar-1"><span>Specifications</span></a></li>
               <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>
-              <li><a href="#section-bar-3"><span>Videos</span></a></li>
+              <!--<li><a href="#section-bar-3"><span>Videos</span></a></li>-->
             </ul>
         </nav>
         <div class="content-wrap">
@@ -71,7 +94,7 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Tool Model</th>
-                  <td colspan="2">SC-250</td>
+                  <td colspan="2">SC-125</td>
                 </tr>
                 <tr>
                   <th>Pressure Range</th>
@@ -80,50 +103,54 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Flow Range</th>
-                  <td>0.7-3.0 bpm</td>
-                  <td><span class="metric">30-120 gpm</span></td>
+                  <td>0.5-1.25 bpm</td>
+                  <td><span class="metric">21-53 gpm</span></td>
                 </tr>
+<!--
                 <tr>
                   <th>Flow Rating</th>
-                  <td colspan="2">7.5 Cv</td>
+                  <td colspan="2">2.3 Cv</td>
                 </tr>
+-->
                 <tr>
                   <th>Rotation Speed</th>
-                  <td colspan="2">80-150 rpm</td>
+                  <td colspan="2">30-70 rpm</td>
                 </tr>
                 <tr>
                   <th>Inlet Connection</th>
-                  <td colspan="2">1-1/2" AMMT</td>
+                  <td colspan="2">7/8" AMMT</td>
                 </tr>
+<!--
                 <tr>
                   <th>PSI Loss (@ 1 bpm)</th>
-                  <td>31 psi</td>
-                  <td><span class="metric">2 bar</span></td>
+                  <td>330 psi</td>
+                  <td><span class="metric">23 bar</span></td>
                 </tr>
+-->
                 <tr>
                   <th>Tension (pull)</th>
-                  <td>Safe load to 20000 lbs</td>
-                  <td><span class="metric">9072 kg</span></td>
+                  <td>Safe load to 8500 lbs</td>
+                  <td><span class="metric">3856 kg</span></td>
                 </tr>
                 <tr>
                   <th>Compression (set down)</th>
-                  <td>Safe load to 25000 lbs</td>
-                  <td><span class="metric">11340 kg</span></td>
+                  <td>Safe load to 12000 lbs</td>
+                  <td><span class="metric">5443 kg</span></td>
                 </tr>
                 <tr>
                   <th>Outside Diameter</th>
-                  <td>2.5 in.</td>
-                  <td><span class="metric">6.4 cm</span></td>
+                  <td>1.25 in.</td>
+                  <td><span class="metric">32 mm</span></td>
                 </tr>
                 <tr>
                   <th>Overall Length</th>
-                  <td>16 in.</td>
-                  <td><span class="metric">40.6 cm</span></td>
+                  <td>8.3 in.</td>
+                  <td><span class="metric">203 mm</span></td>
                 </tr>
                 <tr>
                   <th>Weight</th>
-                  <td>15.9 lbs</td>
-                  <td><span class="metric">7.2 kg</span></td>
+                  <td>1.9 lbs</td>
+                  <td><span class="metric">0.9 kg</span></td>
                 </tr>
                 <tr>
                   <th>Maximum Temperature</th>
@@ -145,12 +172,13 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Manuals</h3>
-                <li><a href="/assets/pdf/manuals/SC-250_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SpinCat SC-250 Manual</a></li>
+                <li><a href="/assets/pdf/manuals/SC-125_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SpinCat SC-125 Manual</a></li>
               </ul>
             </div>
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
+                <li><a href="/assets/pdf/data-sheets/SC-125_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SpinCat SC-125 Data Sheet</a></li>
                 <li><a href="/assets/pdf/data-sheets/SpinCat_family_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SpinCat Family Data Sheet</a></li>
                 <li><a href="http://jetting.stoneagetools.com/tool/spincat-jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
@@ -162,21 +190,20 @@ master-slider: yes
             </aside>
           </section>
 
-          <!-- Videos -->
+          <!-- Videos 
           <section id="section-bar-3">
             <div class="row row-centered">
               <div class="col-sm-4 col-centered">
-                <!-- Lightbox call -->
-                <div>
-                  <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #sc-250-vid">
-                    <img src="/assets/vid/thumb/sc-250-vid.png" alt="SpinCat SC-250 Maintenance video" class="img-responsive" />
+                <!-- Lightbox call 
+                  <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #sc-168-vid">
+                    <img src="/assets/vid/thumb/sc-168-vid.png" alt="SpinCat SC-168 Maintenance video" class="img-responsive" />
                   </a>
                 </div>
-                <!-- End Lightbox call -->
-                <p class="caption">SpinCat SC-250 Maintenance</p>
+                <!-- End Lightbox call 
+                <p class="caption">SpinCat SC-168 Maintenance</p>
               </div>
             </div>
-          </section>
+          </section>-->
 
         </div><!-- /content -->
     </div><!-- /tabs -->
@@ -190,10 +217,6 @@ master-slider: yes
   </div>
   <div class="row row-centered padding-tb-30">
     <div class="col-sm-2 col-centered">
-      <a href="/sc-125"><img class="img-responsive" src="/assets/img/product/sc-125-01.jpg" alt="SpinCat SC-125 slimhole wash tools">
-      <h5>SpinCat SC-125</h5></a>
-    </div>
-    <div class="col-sm-2 col-centered">
       <a href="/sc-168"><img class="img-responsive" src="/assets/img/product/sc_168_01.png" alt="SpinCat SC-168 downhole wash tools">
       <h5>SpinCat SC-168</h5></a>
     </div>
@@ -202,13 +225,16 @@ master-slider: yes
       <h5>SpinCat SC-212</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
+      <a href="/sc-250"><img class="img-responsive" src="/assets/img/product/sc_250_01.png" alt="SpinCat SC-250 downhole wash tools">
+      <h5>SpinCat SC-250</h5></a>
+    </div>
+    <div class="col-sm-2 col-centered">
       <a href="/sc-287"><img class="img-responsive" src="/assets/img/product/sc_287_01.png" alt="SpinCat SC-287 downhole wash tools">
       <h5>SpinCat SC-287</h5></a>
     </div>
   </div>
 </section>
 <!-- End Related Items -->
-
 
 <!-- Product extras -->
 <section class="product-extra fluid-container bg-lt-grey">
@@ -220,7 +246,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="/assets/pdf/data-sheets/SpinCat_family_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Data Sheet</a></td>
+          <td><a href="/assets/pdf/data-sheets/SC-125_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Data Sheet</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
