--- a/downhole-tools/spincat-sc-168.html
+++ b/downhole-tools/spincat-sc-168.html
@@ -151,7 +151,7 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
-                <li><a href="/assets/pdf/data-sheets/spincat_family_datasheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SpinCat Family Data Sheet</a></li>
+                <li><a href="/assets/pdf/data-sheets/SpinCat_family_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SpinCat Family Data Sheet</a></li>
                 <li><a href="http://jetting.stoneagetools.com/tool/spincat-jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
             </div>
@@ -190,6 +190,10 @@ master-slider: yes
   </div>
   <div class="row row-centered padding-tb-30">
     <div class="col-sm-2 col-centered">
+      <a href="/sc-125"><img class="img-responsive" src="/assets/img/product/sc-125-01.jpg" alt="SpinCat SC-125 slimhole wash tools">
+      <h5>SpinCat SC-125</h5></a>
+    </div>
+    <div class="col-sm-2 col-centered">
       <a href="/sc-212"><img class="img-responsive" src="/assets/img/product/sc_212_01.png" alt="SpinCat SC-212 downhole wash tools">
       <h5>SpinCat SC-212</h5></a>
     </div>
@@ -215,7 +219,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="/assets/pdf/data-sheets/spincat_family_datasheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Data Sheet</a></td>
+          <td><a href="/assets/pdf/data-sheets/SpinCat_family_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Data Sheet</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
