--- a/manuals.html
+++ b/manuals.html
@@ -427,6 +427,14 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
+                <td><a href="/sc-125">SC-125</a></td>
+                <td>SPINCAT SC-125</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/SC-125_Manual_Insert.pdf" target="_blank" class="btn btn-sm">PL 546</a></td>
+                <td class="text-center"><a href="/assets/pdf/data-sheets/SC-125_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
+                <td class="text-center"></td>
+                <td class="text-center"></td>
+              </tr>
+              <tr>
                 <td><a href="/sc-168">SC-168</a></td>
                 <td>SPINCAT SC-168</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/SC-168_Manual_Insert.pdf" target="_blank" class="btn btn-sm">PL 546</a></td>
