--- a/downhole-tools.html
+++ b/downhole-tools.html
@@ -7,9 +7,9 @@ permalink: /downhole-tools
 ---
 
 <main class="spincat landing">
-  <div class="row bg-lt-grey margin-bottom-30 header">
+  <div class="row bg-lt-grey margin-bottom-30 header" style="padding:0;">
     <div class="col-sm-12 heading-img">
-      <img src="assets/img/spincat_family.jpg" class="img-responsive" alt="SpinCat Downhole Wash Tools"/>
+      <img src="/assets/img/spincat_family_002.jpg" class="img-responsive" alt="SpinCat Downhole Wash Tools"/>
     </div>
     <div class="col-sm-12 heading">
       <h1>SpinCat</h1>
@@ -19,13 +19,24 @@ permalink: /downhole-tools
 
   <section class="row padding-tb-30">
     <div class="container">
-      <p class="width-90 description margin-bottom-30"><span class="bold">The SpinCat family of tools provide a durable, controlled rotation solution for well intervention operations.</span> A viscous fluid governor controls rotation speed to maximize jet power delivered to the tubing walls. By using only a few rotating jets, each jet is bigger to convey hard-hitting power. Replaceable jets are efficient and clean recesses and irregular surfaces without damaging the well pipe. Over thirty years of waterjet engineering back the SpinCat design, setting the standard for rotary nozzle performance and durability.</p>
+      <h2 class="width-90"><strong>SpinCat tools provide a durable, controlled rotation solution for well intervention</strong></h2>
+      <p class="width-90 description margin-bottom-30">A viscous fluid governor controls rotation speed to maximize jet power delivered to the tubing walls. By using only a few rotating jets, each jet is bigger to convey hard-hitting power. Replaceable jets are efficient and clean recesses and irregular surfaces without damaging the well pipe. Over thirty years of waterjet engineering back the SpinCat design, setting the standard for rotary nozzle performance and durability.</p>
       <!-- Tool List -->
+      <div class="row">
+        <div class="col-sm-12 product-list">
+          <div class="list-group">
+            <a href="/sc-125" class="list-group-item header">SpinCat SC-125</a>
+            <a href="/sc-125" class="list-group-item"><img src="/assets/img/features/sc-125-for-landing.png" class="img-responsive" alt="SpinCat SC-125 Slimhole Wash Tools">
+<!--              <p>Flow range: 0.5 - 1.25 bpm</p>-->
+            </a>
+          </div>
+        </div>
+      </div>
       <div class="row">
         <div class="col-sm-3 product-list">
           <div class="list-group">
             <a href="/sc-168" class="list-group-item header">SpinCat SC-168</a>
-            <a href="/sc-168" class="list-group-item"><img src="assets/img/product/sc_168_01.png" class="img-responsive sc-168" alt="SpinCat SC-168 Downhole Wash Tools">
+            <a href="/sc-168" class="list-group-item"><img src="/assets/img/product/sc_168_01.png" class="img-responsive sc-168" alt="SpinCat SC-168 Downhole Wash Tools">
               <p>Flow range: 0.7 – 1.3 bpm</p>
             </a>
           </div>
@@ -34,7 +45,7 @@ permalink: /downhole-tools
         <div class="col-sm-3 product-list">
           <div class="list-group sc-212">
             <a href="/sc-212" class="list-group-item header">SpinCat SC-212</a>
-            <a href="/sc-212" class="list-group-item"><img src="assets/img/product/sc_212_01.png" class="img-responsive sc-212" alt="SpinCat SC-212 Downhole Coil Tubing Wash Tools">
+            <a href="/sc-212" class="list-group-item"><img src="/assets/img/product/sc_212_01.png" class="img-responsive sc-212" alt="SpinCat SC-212 Downhole Coil Tubing Wash Tools">
               <p>Flow range: 0.8 – 2 bpm</p>
             </a>
           </div>
@@ -43,7 +54,7 @@ permalink: /downhole-tools
         <div class="col-sm-3 product-list">
           <div class="list-group">
             <a href="/sc-250" class="list-group-item header">SpinCat SC-250</a>
-            <a href="/sc-250" class="list-group-item"><img src="assets/img/product/sc_250_01.png" class="img-responsive sc-250" alt="SpinCat SC-250 Downhole Wash Tools">
+            <a href="/sc-250" class="list-group-item"><img src="/assets/img/product/sc_250_01.png" class="img-responsive sc-250" alt="SpinCat SC-250 Downhole Wash Tools">
               <p>Flow range: 0.7 – 3.0 bpm</p>
             </a>
           </div>
@@ -52,7 +63,7 @@ permalink: /downhole-tools
         <div class="col-sm-3 product-list">
           <div class="list-group">
             <a href="/sc-287" class="list-group-item header">SpinCat SC-287</a>
-            <a href="/sc-287" class="list-group-item"><img src="assets/img/product/sc_287_01.png" class="img-responsive sc-287" alt="SpinCat SC-287 Downhole Wash Tools">
+            <a href="/sc-287" class="list-group-item"><img src="/assets/img/product/sc_287_01.png" class="img-responsive sc-287" alt="SpinCat SC-287 Downhole Wash Tools">
               <p>Flow range: 1.0 – 3.0 bpm</p>
             </a>
           </div>
@@ -86,8 +97,7 @@ permalink: /downhole-tools
       <div class="row padding-tb-30">
         <h2>Hard-Hitting Cleaning Power</h2>
         <p class="thin">Cut through parafin, asphaltine, hydrates, calcium carbonate, barium sulphate or mineral scale with ease.</p>
-
-          <iframe src="https://www.youtube.com/embed/4RU21ZBTzP8" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/4RU21ZBTzP8?rel=0" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
   </section>
