--- a/downhole-tools/spincat-sc-287.html
+++ b/downhole-tools/spincat-sc-287.html
@@ -194,7 +194,7 @@ master-slider: yes
   </div>
   <div class="row row-centered padding-tb-30">
     <div class="col-sm-2 col-centered">
-      <a href="/sc-125"><img class="img-responsive" src="/assets/img/product/sc-125-01.jpg" alt="SpinCat SC-125 slimhole wash tools">
+      <a href="/sc-125"><img class="img-responsive" src="/assets/img/product/sc-125_02_sm.png" alt="SpinCat SC-125 slimhole wash tools">
       <h5>SpinCat SC-125</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
