--- a/loc-europe.html
+++ b/loc-europe.html
@@ -85,7 +85,7 @@ contact-europe: yes
             <p><strong>Bob Birt</strong>
             <br/>Technical Consultant<br/>
               Main: +44 (0) 1684 892065<br/>
-              <a href="mailto:bob@aquapower.uk.com">bob@aquapower.uk.com</a></p>
+              <a href="mailto:bob.birt@stoneagetools.com">bob.birt@&#8203;stoneagetools.com</a></p>
           </div>
         </div>
 
