autopack-pro + misc updates

--- a/index.html
+++ b/index.html
@@ -131,6 +131,11 @@ permalink: /
     </div>
     <ul class="home-news list-unstyled">
       <li>
+        <h4><a href="http://news.stoneagetools.com/announcing-new-spincat-sc-125">Announcing New SpinCat</a></h4>
+        <p>Introducing our newest addition to the SpinCat product line, the SC-125.<br>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, March 2017</small></p>
+      </li>
+      <li>
         <h4><a href="http://news.stoneagetools.com/welcome-stoneage-europe">StoneAge, Inc Announces Acquisition of AquaPower Ltd. In U.K.</a></h4>
         <p>StoneAge announces that on February 21st 2017, it finalized the acquisition of AquaPower Ltd., a leading reseller of high pressure waterblasting tooling and accessories based in the United Kingdom. The acquisition expands capacity for StoneAge to provide world-class water blasting products and technical support to industrial cleaning contractors across the European Economic Area.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, March 2017</small></p>
@@ -148,11 +153,6 @@ permalink: /
       <li>
         <h4><a href="http://news.stoneagetools.com/abx-3l-available" target="_blank">Announcing AutoBox ABX-3L</a></h4>
         <p>StoneAge is excited to announce the release of the AutoBox ABX-3L automated lancing system for your toughest exchanger cleaning jobs.<br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, February 2017</small></p>
-      </li>
-      <li>
-        <h4><a href="http://news.stoneagetools.com/rotary-hydro-x-available">Rotary Hydro-X Available</a></h4>
-        <p>The new HXR-300 Rotary Hydro-X tool has an angled rotating jet pattern for effective digging and working around utilities.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, February 2017</small></p>
       </li>
       <li><a href="http://news.stoneagetools.com/">More news here</a></li>
